--- a/package.json
+++ b/package.json
@@ -2,28 +2,35 @@
   "name": "serverapp",
   "version": "1.0.0",
   "description": "\"Backend API \"",
-  "main": " .\\ServerLocal\\server.js",
+  "main": " ./ServerLocal/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon .\\ServerLocal\\server.js"
+    "start": "node ./ServerLocal/server.js",
+    "compile-start": "tsc node ./ServerLocal/server.js",
+    "nodeshift": "nodeshift",
+    "postinstall": "tsc"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "mongoose": "^5.2.5",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.1"
-  },
-  "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/mongoose": "^5.2.3",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^10.5.4",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.5",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "nodeshift": "^1.11.0",
     "typescript": "^2.9.2"
-  }
+  },
+  "devDependencies": {}
 }
